--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     },
     "require-dev": {
-        "orchestra/testbench": "~3.0",
-        "phpunit/phpunit": "^6.1"
+        "phpunit/phpunit": "^7.4@dev",
+        "orchestra/testbench": "^3.8@dev"
     }
 }
