--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
             "email": "vinicius.cardoso23@etec.sp.gov.br"
         }
     ],
-    "require": {},
+    "require": {
+        "php": "^7.1.3",
+    },
     "autoload": {
         "psr-4": {
             "H4ad\\Scheduler\\": "src/Scheduler"
